# Agentic-Skills

./: .gitignore  .mcp.example.json  AGENTS.md  README.md  skills_index.json
Trading-skills/indian-trading-skills/: .gitignore  README.md  pyproject.toml
Trading-skills/indian-trading-skills/skills/backtest-expert/: SKILL.md
Trading-skills/indian-trading-skills/skills/backtest-expert/references/: failed_tests.md
Trading-skills/indian-trading-skills/skills/backtest-expert/scripts/: evaluate_backtest.py
Trading-skills/indian-trading-skills/skills/fii-dii-flow-tracker/: SKILL.md
Trading-skills/indian-trading-skills/skills/fii-dii-flow-tracker/assets/: flow_report_template.md
Trading-skills/indian-trading-skills/skills/fii-dii-flow-tracker/references/: flow_analysis_methodology.md
Trading-skills/indian-trading-skills/skills/india-market-breadth/: SKILL.md
Trading-skills/indian-trading-skills/skills/india-market-breadth/assets/: breadth_report_template.md
Trading-skills/indian-trading-skills/skills/india-market-breadth/references/: breadth_methodology.md
Trading-skills/indian-trading-skills/skills/india-news-tracker/assets/: daily_briefing_template.md
Trading-skills/indian-trading-skills/skills/india-news-tracker/references/: sector_mapping.md
Trading-skills/indian-trading-skills/skills/india-stock-analysis/: SKILL.md
Trading-skills/indian-trading-skills/skills/scenario-analyzer/: SKILL.md
Trading-skills/indian-trading-skills/skills/weekly-fno-trade-planner/: SKILL.md
awesome-llm-skills/: CONTRIBUTING.md  README.md
docs/: api-specs.md  (+2 more)
(+44 files in other folders)
