[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "indian-trading-skills"
version = "0.1.0"
description = "Claude Skills for Indian equity investors and traders (NSE/BSE)"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "scipy>=1.13.1",
    "yfinance>=0.2.36",
    "pandas>=2.0",
    "niftystocks>=0.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
    "skills/nse-vcp-screener/scripts/tests",
    "skills/india-stock-analysis/scripts/tests",
    "skills/options-strategy-advisor/scripts/tests",
    "skills/backtest-expert/scripts/tests",
]
